Solution to the Instagram Clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="./css/main.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="main">
+            <div class="container">
+                <div class="phone">
+                    <img src="./images/phones.png" alt="phones" />
+                </div>
+                <div class="content">
+                    <div class="brand">
+                        <img src="./images/brand.png" class="ig-logo" />
+                        <div class="home-button">
+                            <img src="./images/home.png" class="home-icon" />
+                            <span>Log in</span>
+                        </div>
+                    </div>
+                    <div class="content-text">
+                        <h1>Capture and Share the World's Moments</h1>
+                        <p>
+                            Instagram Instagram is a fast, beautiful and fun way to share your life with
+                            friends and family.
+                        </p>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+                        <p>
+                            Take a picture or video, choose a filter to transform its look and feel, then
+                            post to Instagram &mdash; it's that easy. You can even share to Facebook,
+                            Twitter, Tumblr and more. It's a new way to see the world.
+                        </p>
+                        <p>Oh yeah, did we mention it's free?</p>
+                        <div class="app-logos">
+                            <img class="iphone" src="./images/badge-iphone.png" alt="iphone" />
+                            <img src="./images/badge-android.png" alt="badge-android" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <a href="">ABOUT US</a>
+            <a href="">SUPPORT</a>
+            <a href="">BLOG</a>
+            <a href="">PRESS</a>
+            <a href="">API</a>
+            <a href="">JOBS</a>
+            <a href=""> PRIVACY</a>
+            <a href=""> TERMS</a>
+            <p>&copy; 2014 INSTAGRAM</p>
+        </div>
+    </body>
 </html>
