--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <section id="section-first">
+      <div class="img-device">
+        <figure>
+          <img src="images/phones.png" alt="phone" />
+        </figure>
+      </div>
+      <div class="main-content">
+        <div class="top">
+          <figure class="logo">
+            <img src="images/brand.png" alt="brand" />
+          </figure>
+          <button class="btn-login">
+            <img src="images/home.png" alt="" /> Log in
+          </button>
+        </div>
+        <div class="txt-section-first">
+          <h1>
+            Capture and Share the World's Moments
+          </h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
 
-  Capture and Share the World's Moments
+          <div class="apps">
+            <figure class="app-store">
+              <img src="images/badge-iphone.png" alt="" />
+            </figure>
+            <figure class="google-play">
+              <img src="images/badge-android.png" alt="" />
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <footer id="footer">
+      <nav class="nav-footer">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Press</a></li>
+          <li><a href="">API</a></li>
+          <li><a href="">Jobs</a></li>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Terms</a></li>
+        </ul>
+      </nav>
+      <div class="copyright">&copy; 2014 Instagram</div>
+    </footer>
+  </body>
 </html>
