--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css\main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+      <div class="con">  
+          <div class="box1" ><img src="./images/phones.png"></div>
+          <div class="box2" >    
+            <div class="box3" >
+                <img src="./images/brand.png">
+                <a href=""><img class="login" src="./images/botao.png"></a>
+            </div>
+            <div class="box4">
+                <h2>Capture and Share </br> the World's Moments</h2>
+                <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+                it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>  Oh yeah, did we mention it's free?</p>
+            </div>
+            <div class="box5" >
+                <img src="./images/badge-iphone.png">
+                <img src="./images/badge-android.png">
+            </div>
+          </div>        
+      </div>
+  </div>
+  <div class="container2">
+        <nav>
+            <div>
+              <ul class="nav-links">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">API</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li class="insta"><a href="#">&copy; 2014 Instagram</a></li>
+              </ul>
+          </div> 
+        </nav> 
+  </div>     
 </body>
 </html>
