--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section id="main" class="container">
+    <div class="col col-2 main-img">
+      <img src="images/phones.png" alt="Phones instagram" width="300">
+    </div>
+    <div class="col col-2 col-middle">
+        <div class="">
+            <img src="images/brand.png" alt="Instagram brand" width="200" class="img-brand">
+            <button class="button-login"><img src="images/home.png" alt=""> Log in</button>
+        </div>
+        <div class="info-box">
+            <h1 class="dark-blue">Capture and Share the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png" width="150" alt="Badge iphone" class="info-iphone">
+            <img src="images/badge-android.png" width="150" alt="Badge android" class="info-android">
+        </div>
+    </div>
+    <div class="clearfix"></div>
+  </section>
+  <footer class="container" id="footer">
+    <ul class="footer-ul">
+      <li class="footer-li light-blue">About Us</li>
+      <li class="footer-li light-blue">Support</li>
+      <li class="footer-li light-blue">Blog</li>
+      <li class="footer-li light-blue">Press</li>
+      <li class="footer-li light-blue">API</li>
+      <li class="footer-li light-blue">Jobs</li>
+      <li class="footer-li light-blue">Privacy</li>
+      <li class="footer-li light-blue">Terms</li>
+      <li class="footer-li">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
