--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="container">
+    <img src="images/phones.png" width="259" alt="">
+    <div id="main-content">
+      <header>
+        <h1><img id="hero" src="images/brand.png" width="236" alt="Instagram"></h1>
+        <a href="#"><img src="images/home.png" width="15px">Log in</a>
+      </header>
+      <section>
+            <h1>Capture and Share <br>the World's Moments</h1>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <a href=""><img src="images/badge-iphone.png" width="125" alt=""></a>
+            <a href=""><img src="images/badge-android.png" width="117" alt=""></a>
+      </section>
+    </div>
+    <footer>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+  </div>
 </body>
 </html>
