--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div>
+    <header>
+      <div>
+        <img id="div__img__phones" src="/images/phones.png" alt="phones">
+      </div>
+      <div>
+          <img id="div__img__ig" src="/images/brand.png" alt="ig">
+      </div>
+      <div><button id="logIn__button"><img id="div__img__home" src="/images/home.png" alt="home"><strong>Log in</strong></button></div>
+    </header>
+</div>
+  
+  <div id="div__p">
+    <h2>Capture and Share the World's Moments</h2>
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <img id="img__apple" src="/images/badge-iphone.png" alt="iphone app">
+    <img id="img__google" src="/images/badge-android.png" alt="google app">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="list">
+    <ul>
+      <strong>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </strong>
+      <li id="copy">&copy; 2014 Instagram</li>
+    </ul>
+  </div>  
 </body>
 </html>
