--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,700" rel="stylesheet"> -->
 </head>
 <body>
-  Instagram
+  <div id="container">
 
-  Capture and Share the World's Moments
+      <div id="iphone-section">
+        <img src="images/phones.png" alt="">
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div id="info-section">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div id="info-section-top">
+          <img id="ig-img" src="images/brand.png" alt="">
+          <button id="home-button">
+            <img src="images/home.png" alt="">
+            <span>Log in</span>
+          </button>
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <div id="info-section-middle">
+          <h1>Capture and Share </br> the World's Moments</h1>
+          <ul>
+            <li>Instagram is a <b>fast, beautiful </b> and <b>fun</b> way to share your life with friends and family.</li>
+            <li>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</li>
+            <li>Oh yeah, did we mention it's free?</li>
+          </ul>
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+        <div id="info-section-bottom">
+          <img id="badge-iphone" src="images/badge-iphone.png" alt="">
+          <img id="badge-android" src="images/badge-android.png" alt="">
+        </div>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <div id="footer">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </div>
+  </div>
+  
 </body>
 </html>
