--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,12 +9,12 @@
 <div>
     <header>
       <div>
-        <img id="div__img__phones" src="/images/phones.png" alt="phones">
+        <img id="div__img__phones" src="images/phones.png" alt="phones">
       </div>
       <div>
-          <img id="div__img__ig" src="/images/brand.png" alt="ig">
+          <img id="div__img__ig" src="images/brand.png" alt="ig">
       </div>
-      <div><button id="logIn__button"><img id="div__img__home" src="/images/home.png" alt="home"><strong>Log in</strong></button></div>
+      <div><button id="logIn__button"><img id="div__img__home" src="images/home.png" alt="home"><strong>Log in</strong></button></div>
     </header>
 </div>
   
@@ -23,8 +23,8 @@
     <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
     <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
     <p>Oh yeah, did we mention it's free?</p>
-    <img id="img__apple" src="/images/badge-iphone.png" alt="iphone app">
-    <img id="img__google" src="/images/badge-android.png" alt="google app">
+    <img id="img__apple" src="images/badge-iphone.png" alt="iphone app">
+    <img id="img__google" src="images/badge-android.png" alt="google app">
   </div>
 
   <div id="list">
