--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,96 @@
+<!-- Developed by @pipepico -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<section class="main">
+  <section class="container">
+    <aside class="container-aside">
+      <img src="images/phones.png" alt="Instagram">
+      
+    </aside>
+    <section class="container-cont">
+      <section class="header">
+          <img src="images/brand.png" alt="">
+          <a id="button-login" href=""><img src="images/home.png" alt="">Log in</a>
+      </section>
+      <section class="container-block">
+        <section class="block-content">
+          <h3>
+              Capture and Share <br> the World's Moments
+          </h3>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <section > 
+            <a href="#">
+              <img  class="links-downloads"src="images/badge-iphone.png" alt="">
+              Download on the App Store
+            </a>
+            <a href="#"><img class="links-downloads" src="images/badge-android.png" alt="">Get it on Google Play</a>
+          </section>
+        </section>
+      </section>
+    </section>
+  </section>
+  <footer>
+    <ul>
+      <li>
+        <a href="#">
+          About Us
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          Support
+        </a>
+      </li>
+      <li>
+        <a href="#">    
+          Blog
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          Press
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          API
+        </a>
+      </li>
+      <li>
+        <a href="#">    
+          Jobs
+        </a>
+      </li>
+      <li>
+        <a href="#">      
+          Privacy
+        </a>
+      </li>  
+      <li>
+        <a href="#">      
+          Terms
+        </a>
+      </li>  
+      <li style="color:gray">
+        &copy; 2014 Instagram
+      </li>
+    </ul>
+  </footer>
+</section>
+<footer>    
+</footer>  
 </body>
 </html>
