--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <meta charset="UTF-8">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class = container>
+    <aside>
+        <img src= "images/phones.png" alt = "Instagram app phones">
+    </aside>
 
-  Capture and Share the World's Moments
+    <div>
+      <header>
+          <img src= "images/brand.png" alt="Logo Instagram"></a></h1>
+          <a href= "#" class="button">
+            <img src="images/home.png"  alt="home botón">Log In</a>
+        </header>
+        
+        <div class = boxSection width = "600px">
+           <h3>
+            Capture and Share the World's Moments
+          </h3>
+        
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform it's look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <div class = "applinks">
+            <a href="#"><img src="images/badge-iphone.png" alt="Download on AppStore"></a>
+            <a href="#"><img src="images/badge-android.png" alt = "Get it on Google Play"></a>
+          </div>
+        </div>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="clearfix"></div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer>
+        <nav>
+          <ul class = navlinks>
+              <li> <a href="#">About Us</a> </li>
+              <li> <a href="#">Support</a> </li>
+              <li> <a href="#">Blog</a> </li>
+              <li> <a href="#">Press</a> </li>
+              <li> <a href="#">API</a> </li>
+              <li> <a href="#">Jobs</a> </li>
+              <li> <a href="#">Privacy</a> </li>
+              <li> <a href="#">Terms</a> </li>
+              <li id= copyRight> <a href="#">&copy; 2014 Instagram</a> </li>
+          </ul>  
+        </nav>
+      </footer>
+  </div>
 </body>
 </html>
