--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>Instagram </title>
+  <link rel="stylesheet" href="css/main.css">
+  <meta charset ="UFT-8">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <!--MainContainer-->
+  <section id="main" class="container">
+    <div class="col col-2 main-img">
+      <img src="images/phones.png" alt="iphone" width="300">
+    </div>
+    <div class="col col-2 col-middle">
+        <figure>
+            <img src="images/brand.png" alt="Instagram-logo" width="300" class="brand">
+            <button class="button-login"><img src="images/home.png" alt="home"> Log in</button>
+        </figure>
+        <div class="article">
+            <h1 class="dark-blue">Capture and Share the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png" width="150" alt=" iphone" class="apple-store">
+            <img src="images/badge-android.png" width="150" alt="android" class="google-play">
+        </div>
+    </div>
+    <div class="clearfix"></div>
+  </section>
+  <!--FooterSection-->
+  <footer id="footer" class="container">
+    <ul class="footer-ul">
+      <li class="footer-li light-blue"><a href="#"><b>About Us</b></a></li>
+      <li class="footer-li light-blue"><a href="#"><b>Support</b></a></li>
+      <li class="footer-li light-blue"><a href="#"><b>Blog</b></a></li>
+      <li class="footer-li light-blue"><a href="#"><b>Press</b></a></li>
+      <li class="footer-li light-blue"><a href="#"><b>API</b></a></li>
+      <li class="footer-li light-blue"><a href="#"><b>Jobs</b></a></li>
+      <li class="footer-li light-blue"><a href="#"><b>Privacy</b></a></li>
+      <li class="footer-li light-blue"><a href="#"><b>Terms</b></a></li>
+      <li class="footer-li copy">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
