--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-  Instagram
+  
+  <header>
+    <article>
+      <div id="instagram">
+          <img src="file:///Users/ifrank/IronHack/Day3/lab-css-instagram-clone/starter-code/images/brand.png" alt="instagram">
+        </div>
+      <div id="log">
+          <img src="https://scontent.felp1-1.fna.fbcdn.net/v/t1.15752-9/55471849_2132090323540985_4822308478729060352_n.png?_nc_cat=108&_nc_ht=scontent.felp1-1.fna&oh=ba5de38a326dfdeae54d24d03fc86f59&oe=5D13F9E1" alt="home.png">
+        <b>Log in</b>
+        </div>
+    </article>                      
+  </header>
+  
+  <div id="info">
+    <h1>Capture and Share the World's Moments</h1>
+    <div id="info-p">
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+    <p>
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Capture and Share the World's Moments
+  <p>yeah, did we mention it's free?</p>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div id="brand">
+    <img src="file:///Users/ifrank/IronHack/Day3/lab-css-instagram-clone/starter-code/images/badge-iphone.png">
+    <img src="file:///Users/ifrank/IronHack/Day3/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="badge-android.png">
+    </div>
+    
+  </div>
+  <div id="phone">
+    <img src="file:///Users/ifrank/IronHack/Day3/lab-css-instagram-clone/starter-code/images/phones.png" alt="phones">
+  </div>
+  
+<div id="footer">
+  <ul>
+    <li><strong>Us</strong> </li>
+    <li><strong>Support</strong></li>
+    <li><strong>Blog</strong></li>
+    <li><strong>Press</strong></li>
+    <li><strong>API</strong></li>
+    <li><strong>Jobs</strong></li>
+    <li><strong>Privacy</strong></li>
+    <li><strong>Terms</strong></li>
+    <li><strong id="txt"> &copy;2014 instagram</strong></li>
+  </ul>
+</div>
 </body>
 </html>
