Done, postions improvement

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,9 +16,9 @@
   <table>
     <tr>
 <td style="margin-left: 1px">
-<img src="images/brand.png" alt="Instagram" id="logo" width="400px">
+<img src="images/brand.png" alt="Instagram" id="logo" width="450px">
 </td>
-<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+
 <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
@@ -40,10 +40,11 @@
   </header>
   <section> 
     <aside class="phones">
-        <img src="images/phones.png" alt="Phones">
+        <img src="images/phones.png" alt="Phones" width="110%">
     </aside>
 
-    <selection class="righters">
+    <aside class="right">
+      <section class="righters">
       <aside class="containerBlock"> 
         <article class="whiteGradient">
             <h2>Capture and Share the World's Moments</h2>
@@ -55,13 +56,23 @@
                 Oh yeah, did we mention it's free?
               </p>  
               <section class="bottons">
-                 <a href=""><img src="images/badge-iphone.png" alt="Download on the App Store"></a> 
-                  <a href=""><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+                
+                <table>
+                  <br>
+                  <br>
+                <td><a href=""><img src="images/badge-iphone.png" alt="Download on the App Store" width="250px"></a> </td>
+                <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+                <td><a href=""><img src="images/badge-android.png" alt="Get it on Google Play" width="238px"></a></td>
+                </table>
               </section>
-      </article>
-    </selection>
-  </section>
-</section>
+            </article>
+            </aside>
+    
+          </section>
+          </aside>
+        </section>
+        <div class="clear-fix"></div>
+      </section>
 
 <footer>
   <nav>
