--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UFT-8">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header>
+    <div>
+      <img class="instagram-logo" src="./images/brand.png" alt="Instagram logo">
+      <img class="home" src="./images/home.png" alt="Home">
+      <img class="line" src="./images/bgtile.png" alt="Image">
+      <button class="button"> Log in</button>
+    </div>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section>
+    <div class="principal-content">
+      <img class="frame" src="./images/frame.png" alt="frame">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <h2 class="capture-share">Capture and Share the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+      <p><br>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</br><br>Oh yeah, did we mention it's free?</br></p>
+    </div>
+  
+    <div>
+      <img class="phones" src="./images/phones.png" alt="Phones">
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div>
+      <img class="app-store" src="./images/badge-iphone.png" alt="Download on the App Store">
+      <img class="google-play" src="./images/badge-android.png" alt="Get it on Google Play">
+    </div>
+  </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer class="footer">
+    <nav>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copy">&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer> 
 
-  &copy; 2014 Instagram
 </body>
 </html>
