final final v.1, improve images sizes

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,9 +16,9 @@
   <table>
     <tr>
 <td style="margin-left: 1px">
-<img src="images/brand.png" alt="Instagram" id="logo" width="450px">
+<img src="images/brand.png" alt="Instagram" id="logo" width="120%">
 </td>
-
+<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
@@ -48,11 +48,11 @@
       <aside class="containerBlock"> 
         <article class="whiteGradient">
             <h2>Capture and Share the World's Moments</h2>
-
+<br>
             <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
-          
+          <br>
                 Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
-              
+              <br>
                 Oh yeah, did we mention it's free?
               </p>  
               <section class="bottons">
@@ -60,9 +60,9 @@
                 <table>
                   <br>
                   <br>
-                <td><a href=""><img src="images/badge-iphone.png" alt="Download on the App Store" width="250px"></a> </td>
+                <td><a href=""><img src="images/badge-iphone.png" alt="Download on the App Store" width="197px"></a> </td>
                 <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-                <td><a href=""><img src="images/badge-android.png" alt="Get it on Google Play" width="238px"></a></td>
+                <td><a href=""><img src="images/badge-android.png" alt="Get it on Google Play" width="189px"></a></td>
                 </table>
               </section>
             </article>
