--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,65 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="container">
+<div class="phones">
+ <img src="images/phones.png" alt="phones">
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<section class="column2">
+  <div class="icon-top">
+    <img src="images/brand.png" alt="instagram icon">
+    <div class="button">
+    <button>
+     <img src="images/home.png" alt="home">Log in
+   </button>
+  </div>
+   </div>
+  
+  <div class="instruction">
+    <div class="text-instruction">
+      <h1> Capture and Share the World's Moments</h1>
+      <p>  Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <div class="icon-bottom">
+      <img src="images/badge-iphone.png" alt="iphone">
+      <img src="images/badge-android.png" alt="android">
+    </div>
+    </div>
+  </div>
+</section>
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <footer>
+    <ul>
+      <a>About Us</a>
+      <a>Support</a>
+      <a>Blog</a>
+      <a>Press</a>
+      <a>API</a>
+      <a>Jobs</a>
+      <a>Privacy</a>
+      <a>Terms</a>
+     <a class="not-a-link">&copy; 2014 Instagram<a>
+    </ul>
+  </footer>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
+
+
+
+
+
+
+
+  
+
+  
