--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
+    <div class="blue top_blue"></div>
 
-  Capture and Share the World's Moments
+    <div class="move-up center">
+      <img src="./images/phones.png" class="padding-center">
+      <div class="col">
+        <div class="center space-evenly padding-center">
+            <img src="./images/brand.png" class="half-size ">
+            <button class="blue center space-evenly">
+              <img src="./images/home.png">
+              <span id="login-but">Log in</span> 
+            </button>
+        </div>
+        <div class="white padding-center" id="box-corner">
+          <h2>Capture and Share <br>the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="center space-evenly padding-center">
+            <img src="./images/badge-iphone.png">
+            <img src="./images/badge-android.png">
+          </div>
+        </div>
+      </div>   
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer>
+      <span>About Us</span>
+      <span>Support</span>
+      <span>Blog</span>
+      <span>Press</span>
+      <span>API</span>
+      <span>Jobs</span>
+      <span>Privacy</span>
+      <span>Terms</span>
+      <span id="white-color">&copy; 2014 Instagram</span>
+    </footer>
+  
 </body>
 </html>
