--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </header>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <section>
+    <div class="column-40 margin-left-10">
+      <img class="" src=" images/phones.png" alt="phones">
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="column-40">
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="box-header">
+        <img class="logo-ig" src="images/brand.png" alt="logo instagram">
+        <button>
+          <img src="images/home.png" alt="home icon">
+          <span class="button-text">Log in</span> </button>
+      </div>
+      <div class="box">
 
-  &copy; 2014 Instagram
+        <h1>Capture and Share the World's Moments</h1>
+
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+          it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="download-img">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+
+        </div>
+
+
+
+      </div>
+    </div>
+  </section>
+
+
+
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+
+      <li class="brand">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+
+
+
 </body>
+
 </html>
