IronHack Daily Work

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Instagram</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 </head>
 <body>
-  Instagram
+    <header>
+        <button>log in <img src="images/home.png" alt="loginButtonHome"></button>
+        <img src="images/brand.png" alt="Instagram Photo-Title">
+      
+        </header>
+  <span class="cuerpo">
+      <img src="images/phones.png" alt="phone-photo">
 
-  Capture and Share the World's Moments
+  <span class="text"><h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel,
+     then post to Instagram &mdash; it's that easy.
+     You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <a href="Appstore"><img src="images/badge-iphone.png" alt="Iphone-AppStore-Link"></a>
+<a href="GooglePlay"><img src="images/badge-android.png" alt="Android-GooglePlay-Link"></a>
+  </span>
+</span>
+<ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+</ul>
 
   &copy; 2014 Instagram
 </body>
