Ejercicio Instagram Dia 1

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css"  href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+  
+<header></header>
+<div class="principal">
+  
+  <div class="col">
+    <img src="images/phones.png" alt="phones" class="img-phones">
+  </div>
+  
+  <div class="col col-2">
+    <img src="images/brand.png" alt="Instagram" class="img-brand">
+    <p class="login"><img src="../starter-code/images/home.png" alt="home icon">  Log in</p>
+    <section class="text-container">
+      <h2>
+      Capture and Share the World's Moments
+      </h2>
+      <p>
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </p>
+      <p>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+      <p>
+        Oh yeah, did we mention it's free?
+      </p>
+    </section>
+    <div class="button-container">
+        <img src="../starter-code/images/badge-iphone.png" alt="apple store icon" class="button">
+        <img src="../starter-code/images/badge-android.png" alt="playstore icon" class="button">
+      </div>
+  </div>
+  
+  
+</div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<footer>
+<a href="#"> About Us</a>
+<a href="#"> Support</a>
+<a href="#"> Blog</a>
+<a href="#"> Press</a>
+<a href="#">   API</a>
+<a href="#"> Jobs</a>
+<a href="#"> Privacy Terms</a>
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
