Desarrollo html/css

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <img src="../starter-code/images/phones.png" alt="phones" class="phone" >
+  <div class="content">
+  <header class="top">
+    <img src="../starter-code/images/brand.png" alt="Instagram-logo" class="insta-logo">
+   
+    <button type="button" class="button"> <img src="../starter-code/images/home.png" alt="home" class="button-img">Log in</button>
+  </header>   
+  <section id="Description">
+    <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+    <a href="#"><img src="../starter-code/images/badge-iphone.png" alt="badge-iphone" class="down"></a>
+    <a href="#"><img src="../starter-code/images/badge-android.png" alt="badge-android" class="down"></a>
+    
+  </section>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</div>
+  <footer class="foot">
+  <ul>
+     <li><a href="#"> About us</a> </li>   
+     <li><a href="#">Support</a></li>   
+     <li><a href="#">Blog</a></li>   
+     <li><a href="#">Press</a></li>   
+     <li><a href="#">API</a></li>   
+     <li><a href="#">Jobs</a></li>   
+     <li><a href="#">Privacy</a></li>   
+     <li><a href="#">Terms</a></li>   
+     <li>&copy; 2014 Instagram</li>
+  </ul>
+  
+  </footer>
 </body>
 </html>
