--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+    
+  <header>
+    <h1>
+    <img src="images/brand.png" alt="logo">
+    </h1>
+    <button><img src="images/home.png" alt="log in logo"> <span class="button">Log in </span></button>
+    <div class="align-left">
+        <img src="images/phones.png" alt="phone">
+    </div>
+  </header>
+  <div class="container">
+  <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong>and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; 
+    it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <img src="images/badge-iphone.png" alt="badge-iphone">
+  <img src="images/badge-android.png" alt="badge.android">
+  </div>
+<footer>
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li class ="copyright">&copy; 2014 Instagram</li>
+</ul>
+</footer>
 </body>
 </html>
