--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Red social muy divertida para compartir imagenes">
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blue-header"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="img-phones column">
+    <img src="images/phones.png" alt="Phones">
+  </div>
+  
+  <div class="column">
+  <div class="img-insta">
+    <img src="images/brand.png" alt="Instagram logo">
+    <button class="login"><img src="images/home.png"> Log in</button>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <!-- <input type=""> -->
+  </div>
+  
+  <div class="frame-text">
+    <h1>Capture and Share <br>the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    
+      <p>Oh yeah, did we mention it's free?</p>
+  </div>
+   <div class="app-download">
+  <a  href="#"><img src="images/badge-iphone.png"></a>
+  <a  href="#"><img src="images/badge-android.png"></a>
+    </div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="nav-bar">
+      <ul class="nav-bar-item">
+        <li class="nav-bar-li"><a href='#' class="nav-bar-link">About Us</a></li>
+        <li class="nav-bar-li"><a href='#' class="nav-bar-link">Support</a></li>
+        <li class="nav-bar-li"><a href='#' class="nav-bar-link">Blog</a></li>
+        <li class="nav-bar-li"><a href='#' class="nav-bar-link">Press</a></li>
+        <li class="nav-bar-li"><a href='#' class="nav-bar-link">API</a></li>
+        <li class="nav-bar-li"><a href='#' class="nav-bar-link">Jobs</a></li>
+        <li class="nav-bar-li"><a href='#' class="nav-bar-link">Privacy</a></li>
+        <li class="nav-bar-li"><a href='#' class="nav-bar-link">Terms</a></li>
+        <li class="nav-bar-li">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  
 </body>
 </html>
