--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,37 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div class="container">
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="content">
+  <header>
+    <div class="logo"><img src="images/brand.png" alt="Logo Instagram"></div>    
+    <div class="login"><a href="#"><img src="images/home.png" alt="Log in"> Log in</a></div>
+  </header>
+  <section>
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <a href="#"><img src="images/badge-iphone.png" alt="Download on the AppStore"></a>
+      <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+  </section>
+  </div>
+  <footer>
+<ul>
+  <li><a href="#">About Us</a></li>
+  <li><a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#">API</a></li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms</a></li>
+</ul>
+<small>&copy; 2014 Instagram</small>
+</footer>
+</div>
 </body>
 </html>
