Primer commit de main.css y index.html

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header>
+  </header>
+  
+  <div class="bloque">
+    <div class="col telefono">
+      <img src="./images/phones.png" alt="Smart phones">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="col derecha">
+      <div class="cabecera">
+        <img src="./images/brand.png" alt="Instagram">
+        <a href=""><img src="./images/home.png" alt="log in" class="login">Log in</a>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="content">
+        <div class="container-h1">
+            <h1>Capture and Share the World's Moments</h1>
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <div class="container-anchors">
+          <a href=""><img src="./images/badge-iphone.png" alt=""></a>
+          <a href=""><img src="./images/badge-android.png" alt=""></a>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
 
-  &copy; 2014 Instagram
+    <small>&copy; 2014 Instagram</small>
+  </footer>
+
 </body>
 </html>
