fixed column top align

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,27 +7,20 @@
 </head>
 
 <body>
-
-  <header>
-
-  </header>
+  <header></header>
 
   <section>
-    <div class="column-40 margin-left-10">
-      <img class="" src=" images/phones.png" alt="phones">
+    <div class="column-50">
+      <img src="images/phones.png" alt="phones">
     </div>
-
-    <div class="column-40">
-
-
-      <div class="box-header">
-        <img class="logo-ig" src="images/brand.png" alt="logo instagram">
-        <button>
-          <img src="images/home.png" alt="home icon">
-          <span class="button-text">Log in</span> </button>
-      </div>
-      <div class="box">
-
+    <div class="column-50 ">
+      <ul class="box-header">
+        <li><img class="logo-ig" src="images/brand.png" alt="logo instagram"></li>
+        <li><button>
+            <img src="images/home.png" alt="home icon">
+            <span class="button-text">Log in</span> </button></li>
+      </ul>
+      <div class="box-right">
         <h1>Capture and Share the World's Moments</h1>
 
         <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
@@ -43,11 +36,8 @@
           <img src="images/badge-android.png" alt="Get it on Google Play">
 
         </div>
-
-
-
       </div>
-    </div>
+
   </section>
 
 
