change box right for frame bg

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,20 +21,23 @@
             <span class="button-text">Log in</span> </button></li>
       </ul>
       <div class="box-right">
-        <h1>Capture and Share the World's Moments</h1>
+        <div class="box-content">
 
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <h1>Capture and Share the World's Moments</h1>
 
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
-          it's
-          that
-          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-        <p>Oh yeah, did we mention it's free?</p>
-        <div class="download-img">
-          <img src="images/badge-iphone.png" alt="Download on the App Store">
-          <img src="images/badge-android.png" alt="Get it on Google Play">
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="download-img">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+
+          </div>
         </div>
       </div>
 
