--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,7 +15,9 @@
   
   <div class="col col-2">
     <img src="images/brand.png" alt="Instagram" class="img-brand">
+    <div>
     <p class="login"><img src="../starter-code/images/home.png" alt="home icon">  Log in</p>
+    </div>
     <section class="text-container">
       <h2>
       Capture and Share the World's Moments
