--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,7 +10,7 @@
   <header class="top">
     <img src="../starter-code/images/brand.png" alt="Instagram-logo" class="insta-logo">
    
-    <button type="button" class="button"> <img src="../starter-code/images/home.png" alt="home" class="button-img">Log in</button>
+    <button type="button" class="button" > <img src="../starter-code/images/home.png" alt="home" class="button-img">Log in</button>
   </header>   
   <section id="Description">
     <h1>Capture and Share the World's Moments</h1>
@@ -21,8 +21,8 @@
 
     <p>Oh yeah, did we mention it's free?</p>
 
-    <a href="#"><img src="../starter-code/images/badge-iphone.png" alt="badge-iphone" class="down"></a>
-    <a href="#"><img src="../starter-code/images/badge-android.png" alt="badge-android" class="down"></a>
+    <a href="#"><img src="../starter-code/images/badge-iphone.png" alt="badge-iphone"></a>
+    <a href="#"><img src="../starter-code/images/badge-android.png" alt="badge-android"></a>
     
   </section>
 
